# cv-detect-robot

./: CDR jetson docker镜像使用及测试教程.md  CDR x86 docker镜像使用及测试教程  CDR x86 docker镜像使用及测试教程.md  LICENSE  README.md  README_EN.md  README_English  README_English.md
CDR-docker_main_file/: CDR jetson docker image usage and testing tutorial.md  CDR x86 docker image usage and testing tutorial.md
CDR-docker_main_file/deepstream-test7/: README.md  client.py  client_ros.py  deepstream-test_7_cam.py  deepstream-test_7_rtsp.py  dstest7_pgie_config.txt  dstest7_tracker_config.txt  internal_memory.txt
CDR-docker_main_file/deepstream-yolov5/: REAMME.md  client.py  client_ros.py  config_infer_primary.txt  deepstream_yolov5_cam.py  deepstream_yolov5_file.py  deepstream_yolov5_rtsp.py  dstest_v5_tracker_config.txt  internal_memory.txt  requirements.txt
CDR-docker_main_file/deepstream-yolov5/darknet_ros_msgs/: CMakeLists.txt
CDR-docker_main_file/deepstream-yolox/: README.md  client_ros.py  config_infer_primary.txt  deepstream_app_config.txt  deepstream_yolox_cam.py  deepstream_yolox_file.py  deepstream_yolox_rtsp.py  dstest_x_tracker_config.txt  internal_memory.txt  onnx_to_trt.py
resnet10-ros-deepstream/: README.md
yolov5-deepstream-cpp/: README.md  README_EN.md
yolov5-deepstream-python/: README.md  README_EN.md  client.py
yolov5-ros-deepstream/: README(English).md  README(中文).md  README.md  README_EN.md  client_ros.py
yolox-deepstream-cpp/: README.md
yolox-deepstream-python/: README.md
yolox-ros-deepstream/: README.md  README_EN.md  client_ros.py
(+113 files in other folders)
